# dreamLeagueBonusTracker

./: .env.example  .gitignore  README.md  build_exe.py  launcher.py  pyproject.toml
dream_league_bonus_tracker/: api.py  cli.py  client.py  config.py  main.py  models.py  service.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_client.py  test_models.py  test_service.py
